Fix lifetime problems in AXPlatformNodeCocoa.

AXPlatformNodeCocoa needs to check in more places for its |node_| being
detached. Fix and add test coverage.

BUG=734939

Review-Url: https://codereview.chromium.org/2944103005
Cr-Commit-Position: refs/heads/master@{#484048}

Former-commit-id: bb756436f55c01c2066c17d5eec5aaeb1e52a120